extends Node2D

@onready var music = $Music
@onready var button_press = $ButtonPress
@onready var hover = $Hover
@onready var combo_1 = $Combo1
@onready var combo_2 = $Combo2
@onready var combo_3 = $Combo3
@onready var combo_4 = $Combo4
@onready var combo_5 = $Combo5
@onready var move = $Move
@onready var rotatePiece = $Rotate
@onready var drop = $Drop
@onready var money = $Money
@onready var kaching = $Kaching
@onready var settings_press = $SettingsPress
@onready var victory = $Victory
